--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,16 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - "9092:29092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -40,12 +45,41 @@ services:
     container_name: spark
     environment:
       - SPARK_MODE=master
+      # Add worker capabilities to the master
+      # - SPARK_DAEMON_MODE=master,worker
+      # - SPARK_WORKER_CORES=2
+      # - SPARK_WORKER_MEMORY=2g
     ports:
       - "8080:8080"
       - "7077:7077"
+    volumes:
+      - ./src/spark:/opt/spark-apps
+
+  # spark-worker-1:
+  #   image: bitnami/spark:latest
+  #   container_name: spark-worker-1
+  #   depends_on:
+  #     - spark
+  #   environment:
+  #     - SPARK_MODE=worker
+  #     - SPARK_WORKER_CORES=2
+  #     - SPARK_WORKER_MEMORY=2g
+  #     - SPARK_MASTER_URL=spark://spark:7077
+
+  # spark-worker-2:
+  #   image: bitnami/spark:latest
+  #   container_name: spark-worker-2
+  #   depends_on:
+  #     - spark
+  #   environment:
+  #     - SPARK_MODE=worker
+  #     - SPARK_WORKER_CORES=2
+  #     - SPARK_WORKER_MEMORY=2g
+  #     - SPARK_MASTER_URL=spark://spark:7077
 
   minio:
     image: minio/minio
+    container_name: minio
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
